# ese5190-2022

./: LICENSE  Lab Feedback Questions.md  Lab2B Feedback Qustions.md  Questions.md  README.md  RP2040-C-SDK-setup.md  lab2_setup.md  lab2b part5.md  ws2812.c
Lab/01_registers/: Readme.md  ws2812.c
Lab/02_repl/: Readme.md  ws2812.c
Lab/03_sequencer/: Readme.md
Lab/04_slow_motion/: 03_sequencer.py  Readme.md  ws2812.c
Lab/05_i2c_traffic/: Readme.md
Lab/06_pioscope/: Readme.md  ws2812.c
Lab/07_pio_sequencer/: 03_sequencer.py  Readme.md  ws2812.c
Lab/08_adps_protocol/: Readme.md
Lab/09_lab_on_a_chip/: Readme.md  ws2812.pio.h
Lab_2b/05_i2c_traffic/: Readme.md
Mini_Project/: Code.c
Part 10/: Readme.md  blink.c  blink.pio
guides/: RP2040-C-SDK-setup.md
part 1/: Readme.md
part 2/: Readme.md
part 3/: Readme.md  ws2812.c
part 4/: Readme.md
part 6/: CMakeLists.txt  Readme.md
part 7/: Readme.md  ws2812.pio
part 8/: CMakeLists.txt  Readme.md  adps_registers.h  i2c_bus_scan.c  pio_i2c_bus_scan.uf2  registers.h
part 9/: CMakeLists.txt  Readme.md  apds_registers.h  i2c_bus_scan.c  re_build.sh  registers.h  ws2812.h
part1/: part1.md  reg.c
part2/: CMakeLists.txt
part5/: readme.md
students/23qiaoqiaoo/: config.md  proposal-reviews.md
students/aamirabbaskhambaty/: config.md  proposal-reviews.md
students/abdi1717/: proposal-reviews.md
students/akiyamask/: config.md  proposal-reviews.md
students/akozhu/: config.md  proposal-reviews.md
students/akshayabhati/: config.md  proposal-reviews.md
students/amoghgajare/: config.md  proposal-reviews.md
students/andymeisterrrrr/: config.md  proposal-reviews.md
students/angli-00/: config.md  proposal-reviews.md
students/anniepan8215/: config.md  proposal-reviews.md
students/apollow1/: proposal-reviews.md
students/ariiees/: config.md  proposal-reviews.md
students/arnavgadre/: config.md  proposal-reviews.md
students/aurunima/: config.md  proposal-reviews.md
students/chenwei-tang/: config.md  proposal-reviews.md
students/chiyuan9/: config.md  proposal-reviews.md
students/dang0v/: config.md  proposal-reviews.md
students/dvishab/: config.md  proposal-reviews.md
students/essaalk/: config.md  proposal-reviews.md
students/haoliangyou/: config.md  proposal-reviews.md
students/harishramesh98/: config.md  proposal-reviews.md
students/ilandingi/: Part 1.c  config.md  part 2.c  proposal-reviews.md
students/ilandingi/P7/: CMakeLists.txt  flashlight.c  main.c  neopixel.c  neopixel.h  registers.h
students/ilandingi/P8/: APDS9960.c  APDS9960.h  CMakeLists.txt  README.md  i2c.pio  pio_i2c.c
students/ilandingi/P9/: APDS9960.c  APDS9960.h  CMakeLists.txt  README.md  loc.c  neopixel.c  pio_i2c.h
students/ilandingi/p3/: CMakeLists.txt  neopixel.c  neopixel.h  part3.c  readme.md  register.h  sequencer.txt
students/ilandingi/p3/PythonFiles/: Sequenser.py
students/ilandingi/p4/sequencer/: CMakeLists.txt  neopixel.c  repl.c  repl.h  sequencer.c
students/ilandingi/p6/piosequencer/: CMakeLists.txt  logic_analyser.c
students/indigoquadratic/: config.md  proposal-reviews.md
students/jciardullo/: config.md  proposal-reviews.md
students/joyendra/: config.md  proposal-reviews.md
students/juiupenn11/: config.md  proposal-reviews.md
students/katrinaji/: config.md  proposal-reviews.md
students/kop123meter/: config.md  proposal-reviews.md
students/koushik-sss/: config.md  feedback.md  proposal-reviews.md
students/lihzhao14/: config.md  proposal-reviews.md
students/maxi0427/: config.md  proposal-reviews.md
students/maxma6150/: config.md  proposal-reviews.md
students/minghuin/: config.md  proposal-reviews.md
students/mvpeters/: config.md  proposal-reviews.md
students/navgill4/: config.md  proposal-reviews.md
students/ndobrad/: config.md  proposal-reviews.md
students/osamuyi97/: proposal-reviews.md
students/pashashusharin/: proposal-reviews.md
students/phoebe-www/: config.md  proposal-reviews.md
students/prateekbashista/: config.md  proposal-reviews.md
students/praveen-raj-u-s/: proposal-reviews.md
students/pzz97/: config.md  proposal-reviews.md
students/qshansss/: proposal-reviews.md
students/real-yingxu/: config.md  proposal reviews  proposal-reviews.md
students/ronils428/: config.md  proposal-reviews.md
students/ruturajn/: config.md  proposal-reviews.md
students/ryan66666/: config.md  proposal-reviews.md
students/ryanhpan/: config.md  proposal-reviews.md
students/sahil-m-m/: config.md  proposal-reviews.md
students/samalott/: proposal-reviews.md
students/satyajeetburla/: config.md  proposal-reviews.md
students/saurabhparulekar24/: config.md  proposal-reviews.md
students/sen316/: config.md  proposal-reviews.md
students/shantanu_sampath/: config.md
students/shantykins/: proposal-reviews.md
students/sharonun/: config.md  proposal-reviews.md
students/shux3/: config.md  proposal-reviews.md
students/siddmathur14/: config.md  proposal-reviews.md
students/skyfall88888/: config.md  proposal-reviews.md
students/sudong-wang/: config.md  proposal-reviews.md
students/sueqixue/: config.md  proposal-reviews.md
students/sugahiraeth/: config.md  proposal-reviews.md
students/surajmarthy1001/: Feedback.md  config.md  proposal-reviews.md
students/sushrut-upenn/: config.md  proposal-reviews.md
students/thea-e/: config.md  proposal-reviews.md
students/tomgoh/: config.md  proposal-reviews.md
students/unlim-int-soumya/: config.md  proposal-reviews.md
students/villyye97/: config.md  proposal-reviews.md
students/wenxiwei00/: config.md  proposal-reviews.md
students/wenyuwang1/: config.md  proposal-reviews.md
students/willchan9/: config.md  proposal-reviews.md
students/xcyxcyxcyxcy/: config.md  proposal-reviews.md
students/xiaayu/: config.md  proposal-reviews.md
students/yangbozh/: config.md  proposal-reviews.md
students/yash-mb/: config.md  proposal-reviews.md
students/yuchenwang0303/: config.md  proposal-reviews.md
students/yuxuan-li295/: config.md  proposal-reviews.md
students/zgu74/: config.md  proposal-reviews.md
(+57 files in other folders)
